fixed radio btns on smaller screens

--- a/styles/listingEdit.module.css
+++ b/styles/listingEdit.module.css
@@ -126,12 +126,12 @@
 }
 
 .option div {
-  height: 1.5rem;
-  width: 1.5rem;
-  border-radius: 50%;
+  height: 1.8rem;
+  width: 1.8rem;
+  border-radius: 1000rem;
   border: 1px solid #bebdbd;
   margin-right: 1rem;
-  display: flex;
+  display: grid;
   align-items: center;
   justify-content: center;
 }
@@ -140,8 +140,7 @@
   display: inline-block;
   height: 1rem;
   width: 1rem;
-  border-radius: 50%;
-  transform: translate(-0.5px, -0.5px);
+  border-radius: 1000rem;
   transition: all 0.2s;
 }
 
